2005-11-10  Simos Xenitellis  <simos@gnome.org>

	* configure.in: Added tt (Tatar) to ALL_LINGUAS.

2005-10-28  Erdal Ronahi  <erdal.ronahi@gmail.com>

	* configure.in: Added ku (Kurdish) to ALL_LINGUAS

2005-10-28  Christian Neumair  <chris@gnome-de.org>

	* libgnome/gnome-url.c: (gnome_url_show_with_env):
	* libgnome/gnome-url.h:
	Add GNOME_URL_ERROR_CANCELLED and return it in gnome_url_show_with_env
	when the GnomeVFS request fails with GNOME_VFS_ERROR_CANCELLED.

2005-09-30  Tor Lillqvist  <tml@novell.com>

	* libgnome/gnome-program.c (gnome_program_get_property,
	gnome_program_set_property): Use G_SEARCHPATH_SEPARATOR_S instead
	of hardcoded ":".

2005-09-29  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: Bump version to 2.13.0, and require libbonobo 2.13.0
	and glib 2.8.0.
	* libgnome/gnome-init.c: (gnome_bonobo_activation_module_info_get),
	(libgnome_goption_epeaker), (libgnome_goption_disable_sound),
	(libgnome_goption_enable_sound), (libgnome_goption_version),
	(libgnome_module_info_get):
	* libgnome/gnome-program.c: (gnome_program_set_property),
	(gnome_program_get_property), (gnome_program_class_init),
	(gnome_program_finalize), (gnome_program_preinit),
	(gnome_program_parse_args):
	* libgnome/gnome-program.h: Add GOption argument parsing to
	gnome_program_init.
	Patch by Pawel Sliwowski <open.list@gmail.com>, bug #307312.
	* doc/reference/libgnome-sections.txt:
	* doc/reference/tmpl/gnome-program.sgml: Document
	GNOME_PARAM_GOPTION_CONTEXT.

2005-09-29  Tor Lillqvist  <tml@novell.com>

	* configure.in
	* libgnome/gnome-init.c
	* libgnome/gnome-open.c
	* libgnome/libgnome-2.0.pc.in: Do use gnome-vfs on Win32,
	too. Drop the related ifdefs etc. The main reason we do want
	gnome-vfs on Win32 here, too is so that the GNOME module
	dependency tree handled by gnome_program_init() is the same as on
	Unix. This means that gnome_vfs_init() automagically will get
	called as long as an application registers a dependency on