@@ -113,5 +113,16 @@
         <long>File name of the bell sound to be played</long>
       </locale>
     </schema>
+    <schema>
+      <key>/schemas/desktop/gnome/peripherals/keyboard/remember_numlock_state</key>
+      <applyto>/desktop/gnome/peripherals/keyboard/remember_numlock_state</applyto>
+      <owner>gnome</owner>    
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Remember NumLock state</short>
+        <long>When set to true, GNOME will remember the state of the NumLock LED between sessions.</long>
+      </locale>
+    </schema>
   </schemalist>
 </gconfschemafile>
