@@ -1,3 +1,9 @@
+2005-11-13  Jürg Billeter  <j@bitron.ch>
+
+	* schemas/desktop_gnome_peripherals_keyboard.schemas.in:
+	Add schema for numlock state, moved from gnome-control-center.
+	Fixes bug #319788.
+
 2005-11-10  Simos Xenitellis  <simos@gnome.org>
 
 	* configure.in: Added tt (Tatar) to ALL_LINGUAS.
